--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "baseUrl": ".",
     "incremental": true,
     "plugins": [
       {
@@ -20,6 +21,7 @@
       }
     ],
     "paths": {
+      "@/components/*": ["./components/*"],
       "@/*": ["./*"]
     }
   },
